--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_PREFIX_PATH "qt6")
+set(QT_DIR "qt6")
 #find_package(qt6)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
