--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,14 @@
+project(UnitTests LANGUAGES CXX)
+
+include_directories(../src)
+include_directories(../include)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
 include(FetchContent)
 
 FetchContent_Declare(
@@ -7,14 +18,41 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 add_library(GTest::GTest INTERFACE IMPORTED)
-target_link_libraries(GTest::GTest INTERFACE gtest_main)
 
-add_executable(breakout_test tests.cpp)
+add_executable(breakout_test WIN32 tests.cpp)
+
+if (WIN32)
+    target_link_options(breakout_test PRIVATE "/entry:mainCRTStartup")
+endif()
+
+add_test(NAME breakout_test COMMAND breakout_test)
+
+if (WIN32 OR APPLE)
+    set_tests_properties(breakout_test
+            PROPERTIES
+            ENVIRONMENT "PATH=${CONAN_BIN_DIRS_QT}\;$ENV{PATH}"
+            )
+endif()
 
 target_link_libraries(breakout_test
         PRIVATE
         GTest::GTest
-        breakout_test_example
+        BreakoutLib
+        coverage_config
         )
 
-add_test(breakout_test breakout_test)
+if (APPLE)
+    # Since there appear to exist problems with NOT setting the RPATH when building
+    # by enabling CMAKE_KEEP_RPATH and others, we just set the libs absolute paths
+    # to the conan lib dir.
+
+    function(ChangeRPath target file new)
+        add_custom_command(TARGET breakout_test
+                POST_BUILD COMMAND
+                ${CMAKE_INSTALL_NAME_TOOL} -change @rpath/${file} ${new}/${file} $<TARGET_FILE:testMain>)
+    endfunction()
+
+    foreach(qt_lib IN LISTS CONAN_LIBS_QT)
+        ChangeRPath(breakout_test lib${qt_lib}.6.dylib ${CONAN_LIB_DIRS_QT})
+    endforeach()
+endif ()
