--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,70 +1,41 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.20.1)
 
 project(breakoutGame)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTORCC ON)
+option(BUILD_UNIT_TESTS "Build unit tests (default OFF)" OFF)
+option(CODE_COVERAGE "Enable coverage reporting (default OFF)" OFF)
 
-set(CMAKE_PREFIX_PATH "C:/Qt/6.5.0/mingw_64/lib/cmake/")
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 COMPONENTS
-        Core
-        Gui
-        Widgets
-        REQUIRED)
+include(conan.cmake)
+conan_cmake_run(REQUIRES
+        qt/6.1.0
+        openssl/1.1.1k
+        libffi/3.4.2
+        BASIC_SETUP CMAKE_TARGETS
+        GENERATORS cmake_find_package cmake_paths
+        BUILD missing
+        OPTIONS qt/*:shared=True)
+include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
 
-set(PROJECT_SOURCES
-        include/ball.h
-        include/breakout.h
-        include/brick.h
-        include/paddle.h
-        src/ball.cpp
-        src/breakout.cpp
-        src/brick.cpp
-        src/main.cpp
-        src/paddle.cpp
-        )
+add_library(coverage_config INTERFACE)
 
-add_library(breakout_test_example ${PROJECT_SOURCES})
-enable_testing()
-add_subdirectory(test)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    # Add required flags (GCC & LLVM/Clang)
+    target_compile_options(coverage_config INTERFACE
+            -O0        # no optimization
+            -g         # generate debug info
+            --coverage # sets all required flags
+            )
 
-add_executable(breakoutGame ${PROJECT_SOURCES})
+    target_link_options(coverage_config INTERFACE --coverage)
+endif(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
 
-target_link_libraries(breakoutGame
-        Qt::Core
-        Qt::Gui
-        Qt::Widgets
-        )
+add_subdirectory(src)
+add_subdirectory(include)
 
-if (WIN32 AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-    set(DEBUG_SUFFIX)
-    if (MSVC AND CMAKE_BUILD_TYPE MATCHES "Debug")
-        set(DEBUG_SUFFIX "d")
-    endif ()
-    set(QT_INSTALL_PATH "${CMAKE_PREFIX_PATH}")
-    if (NOT EXISTS "${QT_INSTALL_PATH}/bin")
-        set(QT_INSTALL_PATH "${QT_INSTALL_PATH}/..")
-        if (NOT EXISTS "${QT_INSTALL_PATH}/bin")
-            set(QT_INSTALL_PATH "${QT_INSTALL_PATH}/..")
-        endif ()
-    endif ()
-    if (EXISTS "${QT_INSTALL_PATH}/plugins/platforms/qwindows${DEBUG_SUFFIX}.dll")
-        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E make_directory
-                "$<TARGET_FILE_DIR:${PROJECT_NAME}>/plugins/platforms/")
-        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy
-                "${QT_INSTALL_PATH}/plugins/platforms/qwindows${DEBUG_SUFFIX}.dll"
-                "$<TARGET_FILE_DIR:${PROJECT_NAME}>/plugins/platforms/")
-    endif ()
-    foreach (QT_LIB Core Gui Widgets)
-        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy
-                "${QT_INSTALL_PATH}/bin/Qt6${QT_LIB}${DEBUG_SUFFIX}.dll"
-                "$<TARGET_FILE_DIR:${PROJECT_NAME}>")
-    endforeach (QT_LIB)
-endif ()
-
+if (BUILD_UNIT_TESTS)
+    enable_testing()
+    add_subdirectory(test)
+endif()
