--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,8 +31,7 @@ jobs:
       BUILD_TYPE: ${{ matrix.build_type }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2.3.2
+      - uses: actions/checkout@v2
 
       - name: Get Conan
         uses: turtlebrowser/get-conan@v1.0
@@ -56,18 +55,4 @@ jobs:
       - name: Tests
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run:  |
-          ctest --rerun-failed --output-on-failure -C $BUILD_TYPE
-          echo "SERVER: [" 
-          echo $FTP_SERVER
-          echo ${{ env.FTP_SERVER }}
-          echo "]"
-
-      - name: Deploy
-        if: ${{ matrix.build_type == 'Release' }}
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          dry-run: true
+        run: ctest --rerun-failed --output-on-failure -C $BUILD_TYPE
