--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,19 @@
-cmake_minimum_required(VERSION 3.20.1)
+cmake_minimum_required(VERSION 3.20)
 
 project(breakoutGame)
 
 option(BUILD_UNIT_TESTS "Build unit tests (default OFF)" OFF)
 option(CODE_COVERAGE "Enable coverage reporting (default OFF)" OFF)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(conan.cmake)
 conan_cmake_run(REQUIRES
-        qt/6.1.0
-        openssl/1.1.1k
+        qt/6.1.2
         libffi/3.4.2
         BASIC_SETUP CMAKE_TARGETS
-        GENERATORS cmake_find_package cmake_paths
-        BUILD missing
-        OPTIONS qt/*:shared=True)
-include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
+        BUILD missing)
 
 add_library(coverage_config INTERFACE)
 
