--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,7 +24,7 @@ add_executable(breakoutSrc WIN32 MACOSX_BUNDLE
         ${QRC_SOURCE_FILES}
         )
 
-target_link_libraries(App
+target_link_libraries(breakoutSrc
         PRIVATE
         BreakoutLib
         Qt6::Core
@@ -33,7 +33,7 @@ target_link_libraries(App
         )
 
 if (WIN32)
-    target_link_options(App PRIVATE "/entry:mainCRTStartup")
+    target_link_options(breakoutSrc PRIVATE "/entry:mainCRTStartup")
 endif()
 
 if (APPLE)
@@ -42,13 +42,13 @@ if (APPLE)
     # to the conan lib dir.
 
     function(ChangeRPath target file new)
-        add_custom_command(TARGET App
+        add_custom_command(TARGET breakoutSrc
                 POST_BUILD COMMAND
                 ${CMAKE_INSTALL_NAME_TOOL} -change @rpath/${file} ${new}/${file}
-                $<TARGET_FILE:App>)
+                $<TARGET_FILE:breakoutSrc>)
     endfunction()
 
     foreach(qt_lib IN LISTS CONAN_LIBS_QT)
-        ChangeRPath(App lib${qt_lib}.dylib ${CONAN_LIB_DIRS_QT})
+        ChangeRPath(breakoutSrc lib${qt_lib}.dylib ${CONAN_LIB_DIRS_QT})
     endforeach()
 endif ()
