--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,10 @@ conan_cmake_run(REQUIRES
         qt/6.1.2
         libffi/3.4.2
         BASIC_SETUP CMAKE_TARGETS
+        GENERATORS cmake_find_package cmake_paths
         BUILD missing)
+
+include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
 
 add_library(coverage_config INTERFACE)
 
