--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -37,10 +37,12 @@ jobs:
           sudo apt install libgl1-mesa-dev
 
       - name: Get Conan
-        uses: turtlebrowser/get-conan@v1.0
+        uses: turtlebrowser/get-conan@main
+        with:
+          version: 1.60.0
 
       - name: Add Bincrafters Remote
-        run: conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
+        run: conan remote add bincrafters https://bincrafters.jfrog.io/artifactory/api/conan/public-conan
 
       - name: Create Build Environment
         run: cmake -E make_directory ${{github.workspace}}/build
