--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,20 +1,6 @@
 name: macos
 
-on:
-  push:
-    branches:
-      - master
-    paths:
-      - CMakeLists.txt
-      - include/**
-      - src/**
-      - tests/**
-  pull_request:
-    paths:
-      - CMakeLists.txt
-      - include/**
-      - src/**
-      - tests/**
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build-macos:
