--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,24 +1,6 @@
 name: windows
 
-on:
-  push:
-    branches:
-      - master
-    paths:
-      - .github/workflows/windows.yml
-      - CMakeLists.txt
-      - conan.cmake
-      - include/**
-      - src/**
-      - tests/**
-  pull_request:
-    paths:
-      - .github/workflows/windows.yml
-      - CMakeLists.txt
-      - conan.cmake
-      - include/**
-      - src/**
-      - tests/**
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build-windows:
