--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Create Build Environment
         run: cmake -E make_directory ${{github.workspace}}/build
 
-      - name: Mode Install
-        run: echo "TOOLS_SYSTEM_PACKAGE_MANAGER_MODE=install" >> $GITHUB_ENV
+      - name: Set Conan package manager mode to install
+        run: echo "tools.system.package_manager:mode=install" >> $CONAN_USER_HOME/.conan/profiles/default
 
       - name: Configure CMake
         shell: bash
