--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -34,7 +34,7 @@ jobs:
         run: cmake -E make_directory ${{github.workspace}}/build
 
       - name: Set Conan package manager mode to install
-        run: echo "tools.system.package_manager:mode=install" >> $HOME/.conan/profiles/default
+        run: echo "tools.system.package_manager:mode=install" >> \\wsl.localhost\Ubuntu\home\oleksandrshekera\.conan\profiles\default
 
       - name: Configure CMake
         shell: bash
