--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -42,7 +42,7 @@ jobs:
           echo "tools.system.package_manager:mode=install" >> $HOME/.conan/profiles/myprofile
 
       - name: Install dependencies
-        run: conan install /mnt/c/Users/oleks/Desktop/c++/breakoutgame/breakoutgame/build -if build --profile $HOME/.conan/profiles/myprofile
+        run: conan install /mnt/c/Users/oleks/Desktop/c++/breakoutgame/breakoutgame/build/conanfile.txt -if build --profile $HOME/.conan/profiles/myprofile
 
       - name: Configure CMake
         shell: bash
