--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -33,22 +33,10 @@ jobs:
       - name: Create Build Environment
         run: cmake -E make_directory ${{github.workspace}}/build
 
-      - name: Create custom Conan profile
-        run: |
-          mkdir $HOME/.conan/profiles
-          echo "[settings]" > $HOME/.conan/profiles/myprofile
-          echo "os=Linux" >> $HOME/.conan/profiles/myprofile
-          echo "[conf]" >> $HOME/.conan/profiles/myprofile
-          echo "tools.system.package_manager:mode=install" >> $HOME/.conan/profiles/myprofile
-
-#      - name: Install dependencies
-#        run: conan install /mnt/c/Users/oleks/Desktop/c++/breakoutgame/breakoutgame/build/conanfile.txt -if build --profile $HOME/.conan/profiles/myprofile
-
       - name: Configure CMake
         shell: bash
         working-directory: ${{github.workspace}}/build
-        run: |
-          cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
         env:
           CC: gcc-9
           CXX: g++-9
