--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -26,7 +26,6 @@ jobs:
         uses: turtlebrowser/get-conan@main
         with:
           version: 1.60.0
-          conf: tools.system.package_manager:mode=install
 
       - name: Add Bincrafters Remote
         run: conan remote add bincrafters https://bincrafters.jfrog.io/artifactory/api/conan/public-conan
@@ -37,7 +36,10 @@ jobs:
       - name: Configure CMake
         shell: bash
         working-directory: ${{github.workspace}}/build
-        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
+        run: |
+            conan install $GITHUB_WORKSPACE -pr=default --build missing
+            sed -i 's/tools.build_requires: autotools/tools.system.package_manager:mode=install, autotools/g' ~/.conan/profiles/default
+            cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
         env:
           CC:  gcc-9
           CXX: g++-9
