--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -21,6 +21,7 @@ jobs:
           sudo apt update
           sudo apt install gcc-9 g++-9
           sudo apt install libgl1-mesa-dev
+          sudo apt-get install libxcb-xinerama0
 
       - name: Get Conan
         uses: turtlebrowser/get-conan@main
@@ -46,6 +47,9 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: bash
         run: cmake --build . --config $BUILD_TYPE
+
+      - name: Set QT_QPA_PLATFORM to offscreen
+        run: export QT_QPA_PLATFORM=offscreen
 
       - name: Tests
         working-directory: ${{github.workspace}}/build
