--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,21 +22,6 @@ jobs:
           sudo apt install gcc-9 g++-9
           sudo apt install libgl1-mesa-dev
 
-      - name: Install Xvfb
-        shell: bash
-        run: |
-          sudo apt install xvfb
-
-      - name: Start Xvfb
-        shell: bash
-        run: |
-          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-
-      - name: Set Display Environment Variable
-        shell: bash
-        run: |
-          export DISPLAY=:99
-
       - name: Get Conan
         uses: turtlebrowser/get-conan@main
         with:
@@ -48,21 +33,21 @@ jobs:
       - name: Create Build Environment
         run: cmake -E make_directory ${{github.workspace}}/build
 
-      - name: Configure CMake
-        shell: bash
-        working-directory: ${{github.workspace}}/build
-        run: |
-          cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
-        env:
-          CC:  gcc-9
-          CXX: g++-9
-
-      - name: Build
-        working-directory: ${{github.workspace}}/build
-        shell: bash
-        run: cmake --build . --config $BUILD_TYPE
+#      - name: Configure CMake
+#        shell: bash
+#        working-directory: ${{github.workspace}}/build
+#        run: |
+#          cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
+#        env:
+#          CC:  gcc-9
+#          CXX: g++-9
+#
+#      - name: Build
+#        working-directory: ${{github.workspace}}/build
+#        shell: bash
+#        run: cmake --build . --config $BUILD_TYPE
 
       - name: Tests
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run: xvfb-run ctest --rerun-failed --output-on-failure
+        run: ctest --rerun-failed --output-on-failure
