--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -33,19 +33,19 @@ jobs:
       - name: Create Build Environment
         run: cmake -E make_directory ${{github.workspace}}/build
 
-#      - name: Configure CMake
-#        shell: bash
-#        working-directory: ${{github.workspace}}/build
-#        run: |
-#          cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
-#        env:
-#          CC:  gcc-9
-#          CXX: g++-9
-#
-#      - name: Build
-#        working-directory: ${{github.workspace}}/build
-#        shell: bash
-#        run: cmake --build . --config $BUILD_TYPE
+      - name: Configure CMake
+        shell: bash
+        working-directory: ${{github.workspace}}/build
+        run: |
+          cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_UNIT_TESTS=ON
+        env:
+          CC:  gcc-9
+          CXX: g++-9
+
+      - name: Build
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: cmake --build . --config $BUILD_TYPE
 
       - name: Tests
         working-directory: ${{github.workspace}}/build
