--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -46,11 +46,11 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: bash
         run: cmake --build . --config $BUILD_TYPE
-
-      - name: Install xvfb
-        run: sudo apt install xvfb
-
+      
+      - name: Install opencv-python-headless
+        run: pip install opencv-python-headless
+        
       - name: Tests
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run: xvfb-run ctest --rerun-failed --output-on-failure
+        run: ctest --rerun-failed --output-on-failure
